Gestion de alumno generado
gestion de alumnos completo
gestion de alumnos cambiado
gestion de materia completo
modificacion en inscripcion data. faltaba agregar los alumnos a la lista en el metodo obtener alumnos por materia

--- a/UniversidadDeLaPuntaGrupo25/src/Vistas/GestionDeMateria.form
+++ b/UniversidadDeLaPuntaGrupo25/src/Vistas/GestionDeMateria.form
@@ -41,21 +41,13 @@
                           <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
+                      <EmptySpace max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <EmptySpace pref="84" max="32767" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jtCodigo" alignment="1" min="-2" pref="100" max="-2" attributes="0"/>
-                                  <Component id="jtNombre" alignment="1" min="-2" pref="100" max="-2" attributes="0"/>
-                                  <Component id="jtAnio" alignment="1" min="-2" pref="100" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace max="32767" attributes="0"/>
-                              <Component id="jrbEstado" min="-2" pref="106" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="jtCodigo" alignment="1" min="-2" pref="100" max="-2" attributes="0"/>
+                          <Component id="jtNombre" alignment="1" min="-2" pref="100" max="-2" attributes="0"/>
+                          <Component id="jtAnio" alignment="1" min="-2" pref="100" max="-2" attributes="0"/>
+                          <Component id="jrbEstado" alignment="1" min="-2" pref="106" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="0" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="jbNuevo" min="-2" max="-2" attributes="0"/>
@@ -110,9 +102,9 @@
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jrbEstado" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="26" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -194,9 +186,6 @@
     <Component class="javax.swing.JTextField" name="jtAnio">
     </Component>
     <Component class="javax.swing.JRadioButton" name="jrbEstado">
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jrbEstadoActionPerformed"/>
-      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jBuscar">
       <Properties>
