--- a/UniversidadDeLaPuntaGrupo25/src/Vistas/ActualizarNotas.form
+++ b/UniversidadDeLaPuntaGrupo25/src/Vistas/ActualizarNotas.form
@@ -66,7 +66,7 @@
                   <Component id="JButtonGuardarNota" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jBSalirAlumNota" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="0" pref="19" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="15" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -75,7 +75,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="18" style="1"/>
+          <Font name="Arial Black" size="18" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Carga de notas"/>
       </Properties>
@@ -121,7 +121,11 @@
     </Container>
     <Component class="javax.swing.JButton" name="JButtonGuardarNota">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/Img/disk.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Guardar"/>
+        <Property name="horizontalTextPosition" type="int" value="2"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JButtonGuardarNotaActionPerformed"/>
@@ -129,7 +133,11 @@
     </Component>
     <Component class="javax.swing.JButton" name="jBSalirAlumNota">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/Img/logout.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Salir"/>
+        <Property name="horizontalTextPosition" type="int" value="2"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBSalirAlumNotaActionPerformed"/>
