--- a/UniversidadDeLaPuntaGrupo25/src/Vistas/FormulariodeInscripcion.form
+++ b/UniversidadDeLaPuntaGrupo25/src/Vistas/FormulariodeInscripcion.form
@@ -12,6 +12,7 @@
     </Component>
   </NonVisualComponents>
   <Properties>
+    <Property name="closable" type="boolean" value="true"/>
     <Property name="resizable" type="boolean" value="true"/>
     <Property name="enabled" type="boolean" value="false"/>
   </Properties>
