--- a/UniversidadDeLaPuntaGrupo25/src/Vistas/GestionDeMateria.form
+++ b/UniversidadDeLaPuntaGrupo25/src/Vistas/GestionDeMateria.form
@@ -9,6 +9,7 @@
     </Component>
   </NonVisualComponents>
   <Properties>
+    <Property name="closable" type="boolean" value="true"/>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[472, 407]"/>
     </Property>
