--- a/UniversidadDeLaPuntaGrupo25/src/Vistas/GestionAlumnos.form
+++ b/UniversidadDeLaPuntaGrupo25/src/Vistas/GestionAlumnos.form
@@ -166,6 +166,9 @@
     <Component class="com.toedter.calendar.JDateChooser" name="jDCFechaN">
     </Component>
     <Component class="javax.swing.JTextField" name="jTDNI">
+      <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTDNIKeyPressed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jTApellido">
     </Component>
