--- a/UniversidadDeLaPuntaGrupo25/src/Vistas/GestionDeMateria.form
+++ b/UniversidadDeLaPuntaGrupo25/src/Vistas/GestionDeMateria.form
@@ -198,6 +198,9 @@
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jtCodigo">
+      <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jtCodigoKeyPressed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jtNombre">
     </Component>
